tests/error/type_match/base_case_rvalue_to_lvalue_ref5.bz
// error: unable to match tuple expression to type '&auto'
function test()
{
	let _: &auto = [ 0i32, 0.0f64, "" ];
}
